# tsedge

./: .editorconfig  .gitignore  AGENTS.md  CMakeLists.txt  CONTRIBUTING.md  INSTALL.md  LICENSE  README.md  mkdocs.yml  requirements.txt
.github/workflows/: build_python_wheels.yml  ci.yml  docs.yml  release.yml
bench/: file_bench.c  read_path_bench.c  run_block_size_benchmarks.sh  run_read_benchmarks.sh  run_window_benchmarks.sh  run_write_benchmarks.sh  sqlite_bench.c  tsedge_bench.c  write_path_bench.c
demo/system-simulator/: README.md  package-lock.json  package.json  tailwind.config.ts
demo/system-simulator/app/: globals.css  layout.tsx  page.tsx
demo/system-simulator/app/api/command/: route.ts
demo/system-simulator/app/api/export/csv/: route.ts
demo/system-simulator/app/api/state/: route.ts
demo/system-simulator/app/api/storage-tree/: route.ts
demo/system-simulator/app/diagnostics/: page.tsx
demo/system-simulator/components/: BlockPanel.tsx  BufferPanel.tsx  CompressionPanel.tsx  ControlPanel.tsx  CsvPanel.tsx  DatabaseStatePanel.tsx  EventLog.tsx  LoadPanel.tsx  MaintenancePanel.tsx  OperationResultPanel.tsx  PipelineNode.tsx  RetentionPanel.tsx  SegmentShelf.tsx  SeriesListPanel.tsx  StatusHeader.tsx  StorageTree.tsx  SystemPipeline.tsx  ViewNav.tsx  WalPanel.tsx
demo/system-simulator/components/station/: ExportCsvAction.tsx  MetricCard.tsx  RecentEvents.tsx  SituationBar.tsx  StationDashboard.tsx  StationHeader.tsx  stationData.ts  stationTypes.ts
demo/system-simulator/lib/: demoPaths.ts  format.ts  schema.ts
docs/: api.md  benchmarking.md  benchmarks.md  build.md  index.md  release-notes.md  release.md  storage_format.md
docs/api/: c-api.md  python-api.md
docs/concepts/: architecture.md  disk-quota.md  storage-format.md  wal-durability.md
docs/examples/: c-example.md  python-examples.md
docs/getting-started/: installation.md  platforms.md  quickstart.md
examples/: tsedge_demo.c  tsedge_ecopost_agent.c
examples/crash_recovery/: tsedge_crash_writer.c  tsedge_recover_check.c
examples/ecopost/: ecopost_agent.c  ecopost_commands.c  ecopost_commands.h  ecopost_config.c  ecopost_config.h  ecopost_fs.c  ecopost_fs.h  ecopost_ops.c  ecopost_ops.h  ecopost_output.c  ecopost_output.h  ecopost_sensors.c  ecopost_sensors.h  ecopost_state.c  ecopost_state.h
include/: tsedge.h
notebooks/: README.md  benchmark_analysis.ipynb
python/: README.md  pyproject.toml  setup.py  smoke_test.py
python/examples/: basic_usage.py  batch_write.py  read_and_aggregate.py  sensor_simulation.py  window_aggregate.py
python/scripts/: build_native.py  prepare_native.py  wheel_runtime_test.py
python/src/tsedge/: __init__.py  binding.py
scripts/: run_benchmarks.sh  run_ecopost_simulator_demo.sh  run_notebook.sh  setup_notebook_env.sh
src/: bitstream.c  bitstream.h  block.c  block.h  compress.c  compress.h  csv.c  db.c  segment.c  segment.h  series.c  series.h  tsedge.c  wal.c  wal.h
src/api/: tsedge.c
src/compression/: bitstream.h  compress.c  compress.h
src/core/: db.c  db.h  db_quota.c  db_quota.h  series.c  series.h  series_delete.c  series_delete.h  series_index.c  series_index.h  series_list.c  series_list.h  series_query.c  series_query.h  series_retention.c  series_retention.h  series_stats.c  series_stats.h  verify.c  verify.h
src/export/: csv.h
src/storage/: block.c  block.h  segment.c  segment.h  segment_files.c  segment_files.h  segment_reader.c  segment_reader.h  segment_rotation.c  segment_rotation.h  segment_writer.c  segment_writer.h  wal.c  wal.h
tests/: run_crash_recovery_demo.sh  test_block.c  test_compress.c  test_corruption.c  test_db.c  test_delete_series.c  test_flush.c  test_handles.c  test_helpers.h  test_list_series.c  test_main.c  test_quota.c  test_recovery.c  test_retention.c  test_segments.c  test_stats.c  test_verify.c  test_window.c
